--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ bootJar {
 
 sonar {
     properties {
-        property "sonar.projectKey", "sopra-fs24-group-01"
+        property "sonar.projectKey", "sopra-fs24-group-01_sopra-fs24-plantparent-server"
         property "sonar.organization", "sopra-fs24-group-01"
         property "sonar.host.url", "https://sonarcloud.io"
     }
