--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # You can find your h2-console at: http://localhost:8080/h2-console/
 # If you changed the server.port, you must also change it in the URL
 # The credentials to log in to the h2 Driver are defined above. Be aware that the h2-console is only accessible when the server is running.
+
+
+# comment this out for debugging purposes
+# shows the sql statements performed by jpa and hibernate
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
