--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # The credentials to log in to the h2 Driver are defined above. Be aware that the h2-console is only accessible when the server is running.
 
 
-# comment this out for debugging purposes
+# set these to true for debuggin purposes
 # shows the sql statements performed by jpa and hibernate
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
