[#128, #129] Add image upload capabilities
A post to /plants/<plantId>/image with 1 MultipartFile that is sent with the parameter **"image"** will upload this file to Google Cloud Storage and return the URL to the file.
The URL will additionally be added to the field "plantImageUrl" for the plant with <plantId>. This attribute is returned with every plant object.

 The submitted file MUST contain an image with ".jpg", ".jpeg", ".png" ending and is smaller than 2MB.

 Closes 128, Closes 129

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
   implementation 'com.google.cloud:google-cloud-secretmanager:2.42.0'
   implementation platform('com.google.cloud:libraries-bom:26.38.0')
   implementation 'com.google.cloud:google-cloud-storage'
+
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation 'commons-io:commons-io:2.6'
 }
 
 bootJar {
