--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # You can find your h2-console at: http://localhost:8080/h2-console/
 # If you changed the server.port, you must also change it in the URL
 # The credentials to log in to the h2 Driver are defined above. Be aware that the h2-console is only accessible when the server is running.
+# multipart image upload
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+# GCP Bucket config
+gcp.bucket.name=plant-profiles-b7f9f9f1-445b
+gcp.project.id=sopra-fs24-group-01-server
