[#143] Implement persistent GCP SQL backend for GAE app
Introduction of specific spring profiles:
* gcp: The application deployed on GAE
* local: Local development mode with H2 backend.

This can be changed via adding the environment variable `spring_profiles_active=local` to the run configuration.

Closes #143

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,8 @@ jobs:
           deliverables: app.yaml
           version: v1
           credentials: ${{ secrets.GCP_SERVICE_CREDENTIALS }}
+          env_vars: |-
+            spring_profiles_active=gcp
 
       - name: Test
         run: curl "${{ steps.deploy.outputs.url }}"
