--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ springBoot {
     mainClass.set('ch.uzh.ifi.hase.soprafs24.Application')
 }
 
+// This is used to steer the dependencies. Some GCP dependencies try to greedely start an SQL DB.
+String profile = System.getenv("spring_profiles_active")
+
 dependencies {
     implementation 'org.mapstruct:mapstruct:1.3.1.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
@@ -49,12 +52,25 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 
   // GCP dependencies
-  implementation 'com.google.cloud:google-cloud-secretmanager:2.42.0'
-  implementation platform('com.google.cloud:libraries-bom:26.38.0')
-  implementation 'com.google.cloud:google-cloud-storage'
+  implementation 'com.google.cloud:google-cloud-secretmanager:2.42.0' // 	Apr 26, 2024
+  //implementation 'com.google.cloud:google-cloud-secretmanager:2.27.0' // 		May 11, 2023
+  //implementation platform('com.google.cloud:libraries-bom:26.38.0') // 	Apr 30, 2024
+  implementation 'com.google.cloud:libraries-bom:26.14.0' // May 03, 2023
+  //implementation 'com.google.cloud:google-cloud-storage'
+  implementation 'com.google.cloud:google-cloud-storage:2.22.2' // 	May 10, 2023
 
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation 'commons-io:commons-io:2.6'
+
+  // Some of the GCP dependencies try to greedely start a session. This conflicts with H2.
+  if (profile == 'gcp') {
+    // GCP SQL dependencies
+    implementation("com.google.cloud:spring-cloud-gcp-dependencies:5.2.1")
+    implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-mysql:5.2.1'
+    implementation 'com.google.cloud:spring-cloud-gcp-starter-secretmanager:5.2.1'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.1.2'
+  }
 }
 
 bootJar {
