--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -1,9 +1,9 @@
 spring.cloud.gcp.project-id=sopra-fs24-group-01-server
-#spring.cloud.gcp.secretmanager.enabled=true
-#spring.cloud.gcp.secretmanager.bootstrap.enabled=true
+spring.cloud.gcp.secretmanager.enabled=true
+spring.cloud.gcp.secretmanager.bootstrap.enabled=true
 
 # GCP SQL config
-#spring.config.import=sm://
+spring.config.import=sm://
 # Connection information
 spring.datasource.url=sopra-fs24-group-01-server:europe-west6:plant-parent-db
 spring.datasource.username=test-user
