[#143] Remove dependencies relating to gcp-starter-secretmanager

--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -1,6 +1,6 @@
 spring.cloud.gcp.project-id=sopra-fs24-group-01-server
-spring.cloud.gcp.secretmanager.enabled=true
-spring.cloud.gcp.secretmanager.bootstrap.enabled=true
+#spring.cloud.gcp.secretmanager.enabled=true
+#spring.cloud.gcp.secretmanager.bootstrap.enabled=true
 
 # GCP SQL config
 #spring.config.import=optional:sm://
