--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -5,6 +5,7 @@ spring.cloud.gcp.project-id=sopra-fs24-group-01-server
 # GCP SQL config
 #spring.config.import=optional:sm://
 # Connection information
+database=mysql
 spring.datasource.url=sopra-fs24-group-01-server:europe-west6:plant-parent-db
 spring.datasource.username=test-user
 spring.datasource.password=${CLOUD_SQL_SECRET}
