[#143] Remove h2 dependency if gcp profile is active

--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -5,7 +5,7 @@ spring.cloud.gcp.project-id=sopra-fs24-group-01-server
 # GCP SQL config
 #spring.config.import=optional:sm://
 # Connection information
-database=mysql
+#database=jdbc:mysql
 spring.datasource.url=sopra-fs24-group-01-server:europe-west6:plant-parent-db
 spring.datasource.username=test-user
 spring.datasource.password=${CLOUD_SQL_SECRET}
@@ -19,3 +19,5 @@ spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 # multipart image upload config for GCP
 spring.servlet.multipart.max-file-size=6MB
 spring.servlet.multipart.max-request-size=6MB
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
