--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+  if (profile != 'gcp') {
     runtimeOnly 'com.h2database:h2'
+  }
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -65,11 +67,10 @@ dependencies {
   // Some of the GCP dependencies try to greedely start a session. This conflicts with H2.
   if (profile == 'gcp') {
     // GCP SQL dependencies
-    implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-mysql:4.1.4'
+    implementation("com.google.cloud:spring-cloud-gcp-dependencies:5.2.1")
+    implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-mysql:5.2.1'
 
-    implementation("com.google.cloud:spring-cloud-gcp-dependencies:4.1.4")
     //implementation 'com.google.cloud:spring-cloud-gcp-starter-secretmanager:5.2.1'
-
     //implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.1.2'
   }
 }
