--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
