[#143] Add more jdbc and mysql dependencies... maybe gcp will now recognise this

--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -6,6 +6,8 @@ spring.cloud.gcp.project-id=sopra-fs24-group-01-server
 #spring.config.import=optional:sm://
 # Connection information
 #database=jdbc:mysql
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
 spring.datasource.url=sopra-fs24-group-01-server:europe-west6:plant-parent-db
 spring.datasource.username=test-user
 spring.datasource.password=${CLOUD_SQL_SECRET}
