--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,10 @@ dependencies {
     // GCP SQL dependencies
     implementation("com.google.cloud:spring-cloud-gcp-dependencies:5.2.1")
     implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-mysql:5.2.1'
+    implementation 'com.mysql:mysql-connector-j:8.4.0'
+    implementation 'org.springframework:spring-jdbc:6.0.6'
+
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
     //implementation 'com.google.cloud:spring-cloud-gcp-starter-secretmanager:5.2.1'
     //implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.1.2'
