--- a/build.gradle
+++ b/build.gradle
@@ -1,115 +1,106 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.13'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
-    id 'idea'
-    id 'jacoco'
-    id "org.sonarqube" version "4.4.1.3373"
+  id 'org.springframework.boot' version '2.4.13'
+  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+  id 'java'
+  id 'idea'
+  id 'jacoco'
+  id "org.sonarqube" version "4.4.1.3373"
 }
 
 group 'ch.uzh.ifi.hasel'
 version '1.0.0'
 
 java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
-    }
+  toolchain {
+    languageVersion.set(JavaLanguageVersion.of(17))
+  }
 }
 
 configurations {
-    developmentOnly
-    runtimeClasspath {
-        extendsFrom developmentOnly
-    }
+  developmentOnly
+  runtimeClasspath {
+    extendsFrom developmentOnly
+  }
 }
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 springBoot {
-    mainClass.set('ch.uzh.ifi.hase.soprafs24.Application')
+  mainClass.set('ch.uzh.ifi.hase.soprafs24.Application')
 }
 
 // This is used to steer the dependencies. Some GCP dependencies try to greedely start an SQL DB.
 String profile = System.getenv("spring_profiles_active")
 
 dependencies {
-    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
-    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+  implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+  annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+  testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+  developmentOnly 'org.springframework.boot:spring-boot-devtools'
   if (profile != 'gcp') {
     runtimeOnly 'com.h2database:h2'
   }
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+  testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  }
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 
   // GCP dependencies
-  implementation 'com.google.cloud:google-cloud-secretmanager:2.42.0' // 	Apr 26, 2024
-  //implementation 'com.google.cloud:google-cloud-secretmanager:2.27.0' // 		May 11, 2023
-  //implementation platform('com.google.cloud:libraries-bom:26.38.0') // 	Apr 30, 2024
-  implementation 'com.google.cloud:libraries-bom:26.14.0' // May 03, 2023
-  //implementation 'com.google.cloud:google-cloud-storage'
-  implementation 'com.google.cloud:google-cloud-storage:2.22.2' // 	May 10, 2023
-
-    // https://mvnrepository.com/artifact/commons-io/commons-io
-    implementation 'commons-io:commons-io:2.6'
+  implementation 'com.google.cloud:google-cloud-secretmanager:2.42.0'
+  implementation 'com.google.cloud:libraries-bom:26.14.0'
+  implementation 'com.google.cloud:google-cloud-storage:2.22.2'
+  implementation 'commons-io:commons-io:2.6'
 
   // Some of the GCP dependencies try to greedely start a session. This conflicts with H2.
   if (profile == 'gcp') {
-    // GCP SQL dependencies
-    implementation("com.google.cloud:spring-cloud-gcp-dependencies:5.2.1")
-    implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-mysql:5.2.1'
-    implementation 'com.mysql:mysql-connector-j:8.4.0'
-    implementation 'org.springframework:spring-jdbc:6.0.6'
+    implementation 'org.postgresql:postgresql:42.5.4'
 
+    implementation 'org.springframework:spring-jdbc:6.0.6'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
-    //implementation 'com.google.cloud:spring-cloud-gcp-starter-secretmanager:5.2.1'
-    //implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.1.2'
+    implementation 'com.google.cloud.sql:postgres-socket-factory:1.11.1'
   }
 }
 
 bootJar {
-    archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
+  archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
 }
 
 sonar {
-    properties {
-        property "sonar.projectKey", "sopra-fs24-group-01_sopra-fs24-plantparent-server"
-        property "sonar.organization", "sopra-fs24-group-01"
-        property "sonar.host.url", "https://sonarcloud.io"
-    }
+  properties {
+    property "sonar.projectKey", "sopra-fs24-group-01_sopra-fs24-plantparent-server"
+    property "sonar.organization", "sopra-fs24-group-01"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 jacocoTestReport {
-    reports {
-        xml.enabled true
-    }
+  reports {
+    xml.enabled true
+  }
 }
 
 test {
-    useJUnitPlatform()
-    testLogging.showStandardStreams = true
-    maxParallelForks = 1
+  useJUnitPlatform()
+  testLogging.showStandardStreams = true
+  maxParallelForks = 1
 }
 
 File secretPropsFile = file('./local.properties')
 if (secretPropsFile.exists()) {
-    Properties p = new Properties()
-    p.load(new FileInputStream(secretPropsFile))
-    p.each { name, value ->
-        ext[name] = value
-    }
+  Properties p = new Properties()
+  p.load(new FileInputStream(secretPropsFile))
+  p.each { name, value ->
+    ext[name] = value
+  }
 }
 
 defaultTasks 'bootJar', 'build'
