--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=test-user
 spring.datasource.password=${CLOUD_SQL_SECRET}
-spring.datasource.url=jdbc:postgresql://google/plant_parent_server_db?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=sopra-fs24-group-01-server:europe-west6:plant-parent-db-pg
+spring.datasource.url=jdbc:postgresql://google/plant_parent_server_db?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=sopra-fs24-group-01-server:europe-west6:plant-parent-db-pg&user=test-user&password=${CLOUD_SQL_SECRET}
 
 # multipart image upload config for GCP
 spring.servlet.multipart.max-file-size=6MB
