[#143] Moving connection via socket-factory to gcp/IAM based.

--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -1,12 +1,17 @@
 spring.cloud.gcp.project-id=sopra-fs24-group-01-server
+spring.cloud.gcp.sql.database-name=plant_parent_server_db
+spring.cloud.gcp.sql.instance-connection-name=sopra-fs24-group-01-server:europe-west6:plant-parent-db-pg
 
 # GCP SQL config
+#database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=test-user
 spring.datasource.password=${CLOUD_SQL_SECRET}
-spring.datasource.url=jdbc:postgresql://google/plant_parent_server_db?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=sopra-fs24-group-01-server:europe-west6:plant-parent-db-pg&user=test-user&password=${CLOUD_SQL_SECRET}
+#spring.datasource.url=jdbc:postgresql://google/plant_parent_server_db?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=sopra-fs24-group-01-server:europe-west6:plant-parent-db-pg&user=test-user&password=${CLOUD_SQL_SECRET}
+#spring.datasource.url=jdbc:postgresql://google/plant_parent_server_db?&cloudSqlInstance=sopra-fs24-group-01-server:europe-west6:plant-parent-db-pg
+
 
 # multipart image upload config for GCP
 spring.servlet.multipart.max-file-size=6MB
