--- a/build.gradle
+++ b/build.gradle
@@ -62,11 +62,15 @@ dependencies {
   // Some of the GCP dependencies try to greedely start a session. This conflicts with H2.
   implementation 'org.postgresql:postgresql:42.7.2'
 
-  if (profile == 'gcp') {
-    implementation 'org.springframework:spring-jdbc:6.0.6'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+  implementation 'org.springframework:spring-jdbc:6.0.6'
+  implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
-    implementation 'com.google.cloud.sql:postgres-socket-factory:1.11.1'
+  if (profile == 'gcp') {
+
+    //implementation 'com.google.cloud.sql:postgres-socket-factory:1.11.1'
+
+    implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-postgresql:5.2.1'
+    implementation 'com.google.cloud:spring-cloud-gcp-dependencies:5.2.1'
   }
 }
 
