[#143] My sanity is draining out of me, commit by commit

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   if (profile != 'gcp') {
-    runtimeOnly 'com.h2database:h2'
+    //runtimeOnly 'com.h2database:h2'
   }
 
   testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -65,12 +65,13 @@ dependencies {
   implementation 'org.springframework:spring-jdbc:6.0.6'
   implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
+  implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-postgresql:5.2.1'
+  implementation 'com.google.cloud:spring-cloud-gcp-dependencies:5.2.1'
+
   if (profile == 'gcp') {
 
     //implementation 'com.google.cloud.sql:postgres-socket-factory:1.11.1'
 
-    implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-postgresql:5.2.1'
-    implementation 'com.google.cloud:spring-cloud-gcp-dependencies:5.2.1'
   }
 }
 
