--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,6 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
 
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
-  if (profile != 'gcp') {
-    //runtimeOnly 'com.h2database:h2'
-  }
 
   testImplementation('org.springframework.boot:spring-boot-starter-test') {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -59,19 +56,12 @@ dependencies {
   implementation 'com.google.cloud:google-cloud-storage:2.22.2'
   implementation 'commons-io:commons-io:2.6'
 
-  // Some of the GCP dependencies try to greedely start a session. This conflicts with H2.
-  implementation 'org.postgresql:postgresql:42.7.2'
-
-  implementation 'org.springframework:spring-jdbc:6.0.6'
-  implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-
-  implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-postgresql:5.2.1'
-  implementation 'com.google.cloud:spring-cloud-gcp-dependencies:5.2.1'
-
+  // H2 and Cloud SQL dependencies conflict... so we separate them
   if (profile == 'gcp') {
-
-    //implementation 'com.google.cloud.sql:postgres-socket-factory:1.11.1'
-
+    apply from: { 'build_gcp.gradle' }
+  }
+  else {
+    apply from: { 'build_local.gradle' }
   }
 }
 
@@ -109,3 +99,4 @@ if (secretPropsFile.exists()) {
 }
 
 defaultTasks 'bootJar', 'build'
+
