--- a/build_gcp.gradle
+++ b/build_gcp.gradle
@@ -7,4 +7,27 @@ dependencies {
 
   implementation 'com.google.cloud:spring-cloud-gcp-starter-sql-postgresql:5.2.1'
   implementation 'com.google.cloud:spring-cloud-gcp-dependencies:5.2.1'
+
+  // Shared dependencies:
+  implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+  annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+  testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+
+  developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+  testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  }
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+
+  // GCP dependencies
+  implementation 'com.google.cloud:google-cloud-secretmanager:2.42.0'
+  implementation 'com.google.cloud:libraries-bom:26.14.0'
+  implementation 'com.google.cloud:google-cloud-storage:2.22.2'
+  implementation 'commons-io:commons-io:2.6'
+
 }
