--- a/build_gcp.gradle
+++ b/build_gcp.gradle
@@ -1,3 +1,36 @@
+plugins {
+  id 'org.springframework.boot' version '2.4.13'
+  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+  id 'java'
+  id 'idea'
+  id 'jacoco'
+  id "org.sonarqube" version "4.4.1.3373"
+}
+
+group 'ch.uzh.ifi.hasel'
+version '1.0.0'
+
+java {
+  toolchain {
+    languageVersion.set(JavaLanguageVersion.of(17))
+  }
+}
+
+configurations {
+  developmentOnly
+  runtimeClasspath {
+    extendsFrom developmentOnly
+  }
+}
+
+repositories {
+  mavenCentral()
+}
+
+springBoot {
+  mainClass.set('ch.uzh.ifi.hase.soprafs24.Application')
+}
+
 // Some of the GCP dependencies try to greedely start a session. This conflicts with H2.
 dependencies {
   implementation 'org.postgresql:postgresql:42.7.2'
@@ -31,3 +64,39 @@ dependencies {
   implementation 'commons-io:commons-io:2.6'
 
 }
+
+
+bootJar {
+  archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
+}
+
+sonar {
+  properties {
+    property "sonar.projectKey", "sopra-fs24-group-01_sopra-fs24-plantparent-server"
+    property "sonar.organization", "sopra-fs24-group-01"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+
+jacocoTestReport {
+  reports {
+    xml.enabled true
+  }
+}
+
+test {
+  useJUnitPlatform()
+  testLogging.showStandardStreams = true
+  maxParallelForks = 1
+}
+
+File secretPropsFile = file('./local.properties')
+if (secretPropsFile.exists()) {
+  Properties p = new Properties()
+  p.load(new FileInputStream(secretPropsFile))
+  p.each { name, value ->
+    ext[name] = value
+  }
+}
+
+defaultTasks 'bootJar', 'build'
