--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -15,3 +15,6 @@ spring.servlet.multipart.max-file-size=6MB
 spring.servlet.multipart.max-request-size=6MB
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+# Exceptions should also return the message
+server.error.include-message=always
+server.error.include-stacktrace=never
